# telecom-churn-income-integration

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
data_processed/: income_clean.parquet  telco_clean.parquet  telco_with_features.parquet  telco_with_income.parquet
notebooks/: 00_project_setup.ipynb  01_ingest_and_profile.ipynb  02_clean_and_merge.ipynb  03_eda_and_features.ipynb  04_modeling_ab.ipynb  05_interpretation_and_story.ipynb
outputs/models/: modelA_hgb.joblib  modelA_logreg.joblib  modelB_hgb.joblib  modelB_logreg.joblib
outputs/reports/: conclusion.md  final_story.html  resume_bullets.md
outputs/tables/: model_comparison.csv  perm_importance_modelA.csv  perm_importance_modelB.csv
plan/: deep-research-report.md
src/: __init__.py  clean_income.py  clean_telco.py  config.py  evaluate.py  features.py  ingest_acs_income.py  ingest_kaggle.py  interpret.py  merge_income.py  notebook_utils.py  plots.py  train_models.py
tests/: test_evaluate.py  test_features.py  test_income_clean.py  test_interpret.py  test_leakage.py  test_merge.py  test_notebook_utils.py  test_plots.py  test_schema.py  test_train_models.py
